--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.2",
+    "globals": "^17.3.0",
     "nodemon": "^3.1.11"
   }
 }
